parser/src/snapshots/parser__parser__tests__parse_test_data@fail__fail69.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail69.json
---
Ok(
    Number(
        3.3333333333333333e24,
    ),
)
